[Sytle] SASS :bug: fixed text and icons alignements in nav section

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -441,18 +441,19 @@ ul {
   background-color: #9356DC;
   border-radius: 10px;
   padding: 2px 6px 2px 6px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: normal;
   color: white;
-  margin-left: -50px;
+  margin-left: -48px;
 }
 
 .nav__i {
   color: grey;
-  font-size: medium;
+  font-size: large;
 }
 
 .nav__btn-txt {
+  width: 180px;
   text-align: left;
 }
 
